--- a/frontend/src/assets/styles/cmps/stay-index/stay-list/stay-preview/_preview-image-carousel.scss
+++ b/frontend/src/assets/styles/cmps/stay-index/stay-list/stay-preview/_preview-image-carousel.scss
@@ -4,7 +4,7 @@
     overflow: hidden;
 
     & img {
-        aspect-ratio: 1;
+        @include aspect(1, 1);
     }
 
     & .custom-arrow {
